--- a/rabbitmq-quickstart/rabbitmq-quickstart-processor/src/main/resources/application.properties
+++ b/rabbitmq-quickstart/rabbitmq-quickstart-processor/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+rabbitmq-host = rabbitmq-demo-deploy.rabbitmq-system.svc.cluster.local
+
 # Configure the incoming RabbitMQ queue `quote-requests`
 mp.messaging.incoming.requests.queue.name=quote-requests
 mp.messaging.incoming.requests.exchange.name=quote-requests
