--- a/rabbitmq-quickstart/rabbitmq-quickstart-producer/src/main/resources/application.properties
+++ b/rabbitmq-quickstart/rabbitmq-quickstart-producer/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+rabbitmq-host = rabbitmq-demo-deploy.rabbitmq-system.svc.cluster.local
 # Configure the outgoing RabbitMQ exchange `quote-requests`
 mp.messaging.outgoing.quote-requests.exchange.name=quote-requests
 
