--- a/rabbitmq-quickstart/rabbitmq-quickstart-processor/src/main/resources/application.properties
+++ b/rabbitmq-quickstart/rabbitmq-quickstart-processor/src/main/resources/application.properties
@@ -7,6 +7,8 @@ mp.messaging.incoming.requests.exchange.name=quote-requests
 # Configure the outgoing RabbitMQ exchange `quotes`
 mp.messaging.outgoing.quotes.exchange.name=quotes
 
-quarkus.rabbitmq.devservices.port=5672
-
+# quarkus.rabbitmq.devservices.port=5672
+rabbitmq-port=5672 
+rabbitmq-username=guest 
+rabbitmq-password=guest
 quarkus.swagger-ui.always-include=true
