--- a/rabbitmq-quickstart/rabbitmq-quickstart-producer/src/main/resources/application.properties
+++ b/rabbitmq-quickstart/rabbitmq-quickstart-producer/src/main/resources/application.properties
@@ -6,4 +6,8 @@ mp.messaging.outgoing.quote-requests.exchange.name=quote-requests
 mp.messaging.incoming.quotes.queue.name=quotes
 mp.messaging.incoming.quotes.exchange.name=quotes
 
+rabbitmq-port=5672 
+rabbitmq-username=guest 
+rabbitmq-password=guest
+
 quarkus.swagger-ui.always-include=true
