Update rabbitmq configs

--- a/rabbitmq-quickstart/rabbitmq-quickstart-processor/src/main/resources/application.properties
+++ b/rabbitmq-quickstart/rabbitmq-quickstart-processor/src/main/resources/application.properties
@@ -9,6 +9,6 @@ mp.messaging.outgoing.quotes.exchange.name=quotes
 
 # quarkus.rabbitmq.devservices.port=5672
 rabbitmq-port=5672 
-rabbitmq-username=guest 
-rabbitmq-password=guest
+rabbitmq-username=username 
+rabbitmq-password=password
 quarkus.swagger-ui.always-include=true
