--- a/rabbitmq-quickstart/rabbitmq-quickstart-producer/src/main/resources/application.properties
+++ b/rabbitmq-quickstart/rabbitmq-quickstart-producer/src/main/resources/application.properties
@@ -7,7 +7,7 @@ mp.messaging.incoming.quotes.queue.name=quotes
 mp.messaging.incoming.quotes.exchange.name=quotes
 
 rabbitmq-port=5672 
-rabbitmq-username=guest 
-rabbitmq-password=guest
+rabbitmq-username=username 
+rabbitmq-password=password
 
 quarkus.swagger-ui.always-include=true
