Update rabbitmq configs

--- a/rabbitmq-quickstart/rabbitmq-quickstart-processor/src/main/resources/application.properties
+++ b/rabbitmq-quickstart/rabbitmq-quickstart-processor/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-rabbitmq-host = rabbitmq-demo-deploy.rabbitmq-system.svc.cluster.local
+rabbitmq-host = rabbitmq-demo-deploy.rabbitmq-system.svc
 
 # Configure the incoming RabbitMQ queue `quote-requests`
 mp.messaging.incoming.requests.queue.name=quote-requests
@@ -9,6 +9,6 @@ mp.messaging.outgoing.quotes.exchange.name=quotes
 
 # quarkus.rabbitmq.devservices.port=5672
 rabbitmq-port=5672 
-rabbitmq-username=username 
-rabbitmq-password=password
+rabbitmq-username=default_user_7gb5RnU47jn53d4vqji 
+rabbitmq-password=piEDln8UE_FzEluS-Vbecjav2uYRvXnk
 quarkus.swagger-ui.always-include=true
