--- a/rabbitmq-quickstart/rabbitmq-quickstart-producer/src/main/resources/application.properties
+++ b/rabbitmq-quickstart/rabbitmq-quickstart-producer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-rabbitmq-host = rabbitmq-demo-deploy.rabbitmq-system.svc.cluster.local
+rabbitmq-host = rabbitmq-demo-deploy.rabbitmq-system.svc
 # Configure the outgoing RabbitMQ exchange `quote-requests`
 mp.messaging.outgoing.quote-requests.exchange.name=quote-requests
 
@@ -7,7 +7,7 @@ mp.messaging.incoming.quotes.queue.name=quotes
 mp.messaging.incoming.quotes.exchange.name=quotes
 
 rabbitmq-port=5672 
-rabbitmq-username=username 
-rabbitmq-password=password
+rabbitmq-username=default_user_7gb5RnU47jn53d4vqji 
+rabbitmq-password=piEDln8UE_FzEluS-Vbecjav2uYRvXnk
 
 quarkus.swagger-ui.always-include=true
