--- a/amq-quickstart/amqp-quickstart-processor/src/main/resources/application.properties
+++ b/amq-quickstart/amqp-quickstart-processor/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 mp.messaging.incoming.requests.address=quote-requests
 
 
-amqp-host=ex-aao-hdls-svc.amqbroker-system.svc.cluster.local
+amqp-host=ex-aao-hdls-svc
 amqp-port=61616
 amqp-username=YVI3RTNd
 amqp-password=47JtGVpW
