--- a/amq-quickstart/amqp-quickstart-processor/src/main/resources/application.properties
+++ b/amq-quickstart/amqp-quickstart-processor/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 mp.messaging.incoming.requests.address=quote-requests
 
 
-amqp-host=ex-aao-hdls-svc
+amqp-host=amq-route-amqbroker-system.apps.xnkpeyx0.canadacentral.aroapp.io
 amqp-port=61616
 amqp-username=YVI3RTNd
 amqp-password=47JtGVpW
