--- a/amq-quickstart/amqp-quickstart-processor/src/main/resources/application.properties
+++ b/amq-quickstart/amqp-quickstart-processor/src/main/resources/application.properties
@@ -7,5 +7,5 @@ amqp-port=61616
 amqp-username=YVI3RTNd
 amqp-password=47JtGVpW
 
-mp.messaging.incoming.prices.connector=smallrye-amqp
+mp.messaging.incoming.requests.connector=smallrye-amqp
 quarkus.swagger-ui.always-include=true
