Update broker  configs

--- a/amq-quickstart/amqp-quickstart-producer/src/main/resources/application.properties
+++ b/amq-quickstart/amqp-quickstart-producer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-amqp-host=amq-route-amqbroker-system.apps.xnkpeyx0.canadacentral.aroapp.io 
+amqp-host=ex-aao-hdls-svc.amqbroker-system.svc.cluster.local 
 amqp-port=61616 
 amqp-username=YVI3RTNd
 amqp-password=47JtGVpW
