Update broker  configs

--- a/amq-quickstart/amqp-quickstart-producer/src/main/resources/application.properties
+++ b/amq-quickstart/amqp-quickstart-producer/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-amqp-host=ex-aao-hdls-svc.amqbroker-system.svc.cluster.local 
-amqp-port=61616 
+host=ex-aao-hdls-svc.amqbroker-system.svc.cluster.local
+amqp-port=61616
 amqp-username=YVI3RTNd
 amqp-password=47JtGVpW
 
 mp.messaging.outgoing.quote-requests.connector=smallrye-amqp
+mp.messaging.outgoing.quote-requests.address=quote-requests
 quarkus.swagger-ui.always-include=true
