--- a/amq-quickstart/amqp-quickstart-processor/src/main/resources/application.properties
+++ b/amq-quickstart/amqp-quickstart-processor/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 # Set the AMQP address for the `requests` channel, as it's not the channel name
-mp.messaging.incoming.requests.address=quote-requests
 
-
-amqp-host=amq-route-amqbroker-system.apps.xnkpeyx0.canadacentral.aroapp.io
+amqp-host=ex-aao-hdls-svc.amqbroker-system.svc.cluster.local
 amqp-port=61616
 amqp-username=YVI3RTNd
 amqp-password=47JtGVpW
-
+mp.messaging.incoming.requests.address=quote-requests
 mp.messaging.incoming.requests.connector=smallrye-amqp
 quarkus.swagger-ui.always-include=true
