--- a/amq-quickstart/amqp-quickstart-processor/src/main/resources/application.properties
+++ b/amq-quickstart/amqp-quickstart-processor/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Set the AMQP address for the `requests` channel, as it's not the channel name
 
-amqp-host=tcp://10.129.2.15
+amqp-host=tcp://ex-aao-hdls-svc.amqbroker-system.svc.cluster.local
 amqp-port=61616
 amqp-username=YVI3RTNd
 amqp-password=47JtGVpW
