--- a/amq-quickstart/amqp-quickstart-producer/src/main/resources/application.properties
+++ b/amq-quickstart/amqp-quickstart-producer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-amqp-host=tcp://10.129.2.15
+amqp-host=tcp://ex-aao-hdls-svc.amqbroker-system.svc.cluster.local
 amqp-port=61616
 amqp-username=YVI3RTNd
 amqp-password=47JtGVpW
